# psPlotKit

./: .gitignore  AGENTS.md  README.md  README.txt  mkdocs.yml  psplotkit.yml  pyproject.toml  requirements-docs.txt  requirments.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: checks.yml  docs.yml
anaysis_plot_kit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: index.md
docs/api/: box_plotter.md  break_down_plotter.md  data_importer.md  fig_generator.md  line_plotter.md  logger.md  map_plotter.md  plot_data_storage.md  ps_costing.md  ps_data.md  ps_data_exporter.md  ps_data_manager.md  ps_expression.md  util_funcs.md
docs/examples/: bar-plots.md  cost-plotting.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: costing.md  data-import.md  data-management.md  expressions.md  plotting.md
psPlotKit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
psPlotKit/data_manager/: data_importer.py  ps_costing_tool.py  ps_data.py  ps_data_manager.py
psPlotKit/data_manager/tests/: test_data_importer.py
psPlotKit/data_plotter/: fig_generator.py  legacy_data_collator.py  ps_box_plotter.py  ps_break_down_plotter.py  ps_line_plotter.py  ps_map_plotter.py
psPlotKit/examples/: cost_plotting.py
psPlotKit/examples/figs/: Brine salinity vs LCOW.csv  Water recovery vs LCOW.csv
psPlotKit/util/: logger.py  util_funcs.py
waterTapAbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
waterTapAbox/dataImport/: data_import.py
waterTapAbox/data_manager/: data_importer.py
(+28 files in other folders)
